--- a/Course-Manager-Frontend/src/index.html
+++ b/Course-Manager-Frontend/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark"></html>
 <head>
   <meta charset="utf-8">
   <title>CourseManagerFrontend</title>
