--- a/Course-Manager-Frontend/src/index.html
+++ b/Course-Manager-Frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark"></html>
 <head>
   <meta charset="utf-8">
-  <title>CourseManagerFrontend</title>
+  <title>Course Manager</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
